--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to Firebase Hosting</title>
-    <link rel="canonical" href="https://kubuspiekarenka.web.app" />
+    <link rel="canonical" href="https://kubuspiekarenka.pl" />
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/10.13.2/firebase-app-compat.js"></script>
